classDiagram
    direction TB
    class Config {
        +int data_width
        +int addr_width
        +vector~RegisterDef~ registers
        +vector~MemorySegmentDef~ memory_segments
        +vector~ALUOp~ alu_ops
        +vector~Instruction~ instructions
        +vector~PeripheralDef~ peripherals
        +from_json(json) Config
    }
    note for Config "word_t (wide_int.hpp) backs every register/address value in the engine -- a 128-bit integer type supporting bus widths from 4 to 128 bits"

    class CPU {
        -Config cfg_
        -RegisterFile regs_
        -Memory mem_
        -ALU alu_
        -Executor executor_
        -vector~DeclarativePeripheral~ dec_peripherals_
        +load_program(code, word_t address)
        +step()
        +step_uop()
        +trigger_interrupt(id)
    }

    class RegisterFile {
        -vector~RegisterDef~ defs_
        -vector~word_t~ registers_
        -unordered_map~string, size_t~ name_to_index_
        -int pc_index_
        -int sp_index_
        -int flags_index_
        +read(name_or_index) word_t
        +write(name_or_index, value)
        +get_pc() word_t
        +set_pc(val)
        +increment_pc(amount)
        +set_sp(val)
        +find_by_role(role) int
        +read_coproc(cp_id, reg_id) word_t
        +write_coproc(cp_id, reg_id, value)
    }

    class Memory {
        -PageTable pages_
        -PageTable instruction_pages_
        -Endianness endianness_
        -MemoryArch arch_
        -word_t memory_size_
        -int word_size_bytes_
        -vector~MemorySegmentDef~ segments_
        -vector~MMIORegion~ io_regions_
        -vector~MMIORegion~ port_regions_
        +read(word_t address, is_execute, width) word_t
        +write(word_t address, value, width)
        +map_io_region(word_t start, word_t end, r_cb, w_cb)
        +port_read(word_t port) word_t
        +port_write(word_t port, value)
        +is_valid_address(word_t address) bool
    }
    note for Memory "64 KB pages, lazily allocated on first write -- an address space up to 2^128 can be configured without eager allocation"

    class ALU {
        -Config config_
        -word_t mask_
        -word_t sign_bit_
        -unordered_map~string, vector~Token~~ compiled_ops_
        +execute(op_name, a, b, c, width) FullResult
        -compile_expressions()
        -tokenize(expr) vector~Token~
        -shunting_yard(tokens) vector~Token~
        -evaluate_rpn(rpn, a, b, c) word_t
    }

    class Executor {
        -Config config_
        -RegisterFile regs_
        -Memory mem_
        -ALU alu_
        -Decoder decoder_
        -ExecutionState state_
        -bool pc_modified_
        -bool interrupt_pending_
        -int current_execution_cycles_
        +step_uop()
        +get_current_execution_cycles() int
        -perform_uop(uop)
        -resolve_operand(arg) word_t
        -write_operand(arg, value)
    }

    class DeclarativePeripheral {
        -CPU cpu_
        -PeripheralDef def_
        -unordered_map~string, word_t~ registers_
        -unordered_map~string, word_t~ internal_vars_
        +read(word_t offset) word_t
        +write(word_t offset, value)
        +tick()
        -execute_ast(ast, context_value)
    }

    class Instruction {
        +string name
        +uint8_t opcode
        +vector~int~ encoding
        +vector~MicroOp~ microcode
        +int execution_latency
        +LatencyMode latency_mode
    }

    class MemorySegmentDef {
        +string name
        +word_t start
        +word_t end
        +bool r
        +bool w
        +bool x
    }

    class PeripheralDef {
        +string name
        +string type
        +word_t address_start
        +word_t address_end
        +unordered_map~string, string~ parameters
        +vector~PeripheralRegisterDef~ registers
        +unordered_map~string, word_t~ internal_state
        +json tick_behavior
    }

    class LatencyMode {
        <<enumeration>>
        DYNAMIC
        STRICT
        BOTTLENECK
        ADDITIVE
    }

    CPU *-- Config : contains
    CPU *-- RegisterFile : contains
    CPU *-- Memory : contains
    CPU *-- ALU : contains
    CPU *-- Executor : contains
    CPU *-- DeclarativePeripheral : contains many
    Executor o-- RegisterFile : interacts with
    Executor o-- Memory : interacts with
    Executor o-- ALU : interacts with
    DeclarativePeripheral o-- CPU : triggers interrupts/writes
    Instruction o-- LatencyMode : uses
    Config o-- Instruction : contains
    Config o-- MemorySegmentDef : contains
    Config o-- PeripheralDef : contains
